[build-system]
requires = ["setuptools>=61.0.0", "wheel", "cmake>=3.15"]
build-backend = "setuptools.build_meta"

[project]
name = "csilk"
dynamic = ["version"]
description = "High-performance asynchronous web framework in C and Python."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Quintin Lee", email = "quintin@example.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows"
]
dependencies = [
    "fastapi>=0.124.4",
    "httpx>=0.28.1",
    "requests>=2.32.4",
]

[project.scripts]
csilk = "csilk.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.1.0",
]
test = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.1.0",
]
