[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csilk"
version = "0.3.0"
description = "Python bindings for the csilk C framework - a high-performance web and AI workflow orchestrator."
readme = "README.md"
authors = [
    { name = "Quintin Lee", email = "quintin@example.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["csilk*"]
